Refactor App class to streamline router initialization and enhance HTTP response handling with improved error management and content length validation.